data/resources/stylesheet/stylesheet.css
checkbutton,
check {
    min-height: 12px;
    min-width: 12px;
    -gtk-icon-size: 12px;
    padding: 3px;
    border-radius: 6px;
}

.font-bold {
    font-weight: bold;
}

.fw-600 {
    font-weight: 600;
}

.no-padding {
    padding: 0;
}

.padding-6 {
    padding: 6px;
}

.padding-3 {
    padding: 3px;
}

.padding-9 {
    padding: 9px;
}

.border-radius-6 {
    border-radius: 6px;
}

.border-radius-9 {
    border-radius: 9px;
}

.br-12 {
    border-radius: 12px;
}

.border-radius-50 {
    border-radius: 9px;
}

entry.flat:focus-within {
    outline-style: none;
}

.color-primary {
    color: #1e63ec;
}

.color-radio {
    background: @colorAccent;
    border-color: alpha(#000, 0.3);
    box-shadow: inset 0 1px 0 0 alpha(@shadowColor, 0.7),
        inset 0 0 0 1px alpha(@shadowColor, 0.3),
        0 1px 0 0 alpha(@colorAccent, 0.3);
    -gtk-icon-shadow: none;
    padding: 3px;
    border-radius: 50%;
}

.color-radio radio {
    box-shadow: none;
}

.color-radio radio:checked {
    background: transparent;
    color: #fff;
    -gtk-icon-source: -gtk-icontheme("checkmark-small-symbolic");
    -gtk-icon-shadow: 0 1px 1px shade(#fff, 0.85);
}

.color-label-widget {
    background: @colorAccent;
    border: 1px solid @colorAccent;
    border-radius: 50%;
}

.color-row-picker-selected {
    background: @colorAccent;
    border-radius: 50%;
}

.transition {
    transition: all 175ms ease-in-out;
}

.hidden-button image {
    transition: all 250ms ease-in-out;
}

.hidden-button.opened image {
    -gtk-icon-transform: rotate(90deg);
}

.hidden-button.opened {
    -gtk-icon-transform: rotate(90deg);
}

.button-emoji-picker {
    border-radius: 50%;
}

.circular-progress-bar {
    border: 2px solid @colorAccent;
    border-radius: 50%;
}

.listbox-separator-3 row:not(:first-child) {
    margin-top: 3px;
}

.listbox-separator-6 row:not(:first-child) {
    margin-top: 6px;
}

.listbox-separator-9 row:not(:first-child) {
    margin-top: 9px;
}

.listbox-separator-12 row:not(:first-child) {
    margin-top: 12px;
}

.listbox-separator-24 row:not(:first-child) {
    margin-top: 24px;
}

/*
 * MENU STYLE
 */

.menu-item-danger:hover {
    background-color: alpha(#e01b24, 0.25);
}

.header-title {
    font-weight: bold;
    letter-spacing: -0.05em;
    font-size: 15pt;
}

.editable-label {
    background: transparent;
    border: none;
    box-shadow: none;
    outline: none;
    color: inherit;
    padding: 0;
}

.listbox-background {
    background-color: transparent;
}

.row {
    border-radius: 6px;
    background: transparent;
    transition: all 115ms ease-in-out;
}

.row:hover {
    background-color: transparent;
}

.row:selected {
    background-color: transparent;
}

.row.activatable:hover {
    background-color: transparent;
}

.row.activatable:active {
    background-color: transparent;
}

.row.activatable:selected {
    background-color: transparent;
}

.mb-12 {
    margin-bottom: 12px;
}

.mb-24 {
    margin-bottom: 24px;
}

.font-weight-500 {
    font-weight: 500;
}

.mt-12 {
    margin-top: 24px;
}

.mt-24 {
    margin-top: 24px;
}

.card-selected {
    transition: all 225ms ease-in-out;
    margin-bottom: 12px;
    margin-top: 12px;
    margin-left: 3px;
    margin-right: 3px;
    padding-left: 9px;
    padding-top: 3px;
    padding-right: 3px;
    padding-bottom: 6px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.12),
              0 1px 3px rgba(0, 0, 0, 0.08);
}

.theme-dark .card-selected {
    box-shadow: 0 0 0 1px @item_border_color,
                0 2px 4px rgba(0, 0, 0, 0.25);
}

.theme-dark-blue .card-selected {
    box-shadow: 0 0 0 1px @item_border_color,
                0 2px 4px rgba(42, 48, 58, 0.35);
}

.bg-transparent {
    background: transparent;
}

.line-through {
    text-decoration: line-through;
}

.underline {
    text-decoration: underline;
}

.complete-animation {
    background-color: @selected_color;
    border-radius: 9px;
}

.action-button {
    padding: 3px 9px;
}

.toolbar-button {
    padding: 3px 9px 3px 6px;
}

.p3 {
    padding: 3px;
}

.priority-1-color check {
    box-shadow: inset 0 0 0 1px #ff7066;
    background: rgba(255, 112, 102, 0.1);
}

.priority-1-icon {
    color: #ff7066;
}

.priority-2-icon {
    color: #ff9a14;
}

.priority-3-icon {
    color: #5297ff;
}

.priority-1-button image {
    color: #ff7066;
}

.priority-2-button image {
    color: #ff9a14;
}

.priority-3-button image {
    color: #5297ff;
}

.priority-2-color check {
    box-shadow: inset 0 0 0 1px #ff9a14;
    background: rgba(255, 154, 20, 0.1);
}

.priority-3-color check {
    box-shadow: inset 0 0 0 1px #5297ff;
    background: rgba(82, 151, 255, 0.1);
}

.priority-4-color check {
    box-shadow: inset 0 0 0 2px @borders;
    background: transparent;
}

.priority-color {
    padding: 0;
}

.priority-color check:checked {
    background-image: linear-gradient(to bottom, shade(#ff7800, 1.2), #ff7800);
    border-color: shade(#ff7800, 0.9);
    box-shadow: inset 0 0 0 1px shade(#ff7800, 1.15),
        inset 0 1px 0 0 shade(#ff7800, 1.3), 0 1px 1px 0 shade(@bg_color, 0.85);
    color: #fff;
    -gtk-icon-source: -gtk-icontheme("checkmark-small-symbolic");
    -gtk-icon-shadow: 0 1px 1px shade(#ff7800, 0.85);
}

.today-grid {
    background-color: alpha(#16af54, 0.15);
    border-radius: 6px;
    color: #16af54;
    padding: 3px 6px;
    font-weight: bold;
}

.today-color {
    color: #16af54;
}

.upcoming-grid {
    background-color: @upcoming_bg_color;
    border-radius: 6px;
    padding: 3px 6px;
    color: @upcoming_fg_color;
    font-weight: bold;
}

.upcoming-color {
    color: #9141ac;
}

.overdue-grid {
    background-color: alpha(#fa1955, 0.125);
    border-radius: 6px;
    padding: 3px 6px;
    color: #fa1955;
    font-weight: bold;
}

.overdue-color {
    color: #fa1955;
}

.completed-grid {
    background-color: alpha(#ff7800, 0.15);
    border-radius: 6px;
    color: #ff7800;
    padding: 3px 6px;
    font-weight: bold;
}
/* ... */

